test/sema/member-function-call-through-pointer.delta
// RUN: not %delta -typecheck %s | %FileCheck %s

struct Foo {
    let i: int;
    func bar() { }
}

func main() {
    let f: Foo* = null;
    // CHECK: [[@LINE+1]]:5: error: cannot call member function through pointer 'Foo*', pointer may be null
    f.bar();
}
